libycp/testsuite/tests/errors/BadAssignment.ycp
//
// BadAssignment.ycp
//

{
  // simple types

  integer i = 1;
  i = true;
  boolean b = "";
  i = b;
}
